styles.css
/* Base et font */
* {
    font-family: "Poppins", sans-serif;
    padding : 0;
    margin : 0;
    vertical-align: top;
}

/* Container et Centrage */

.container {
    padding : 0 17%;
    height: 100%;
    background-color: rgb(231, 177, 10);
}



/* Titre et image de la famille */

#upperTitle {
    color: rgb(255,255,255);
    background-color: rgb(25, 167, 206);
    text-align: center;
}

#upperImage {
    margin-left: 0%;
    margin-right: 0%;
    width: 100%;
    -webkit-user-select: none;  /* Chrome all / Safari all */
    -moz-user-select: none;     /* Firefox all */
    -ms-user-select: none;      /* IE 10+ */
    user-select: none; 
}

/* Bloc Central */

.centralBlock {
    display: flex;
    justify-content: row;
    background-color: rgb(255, 255, 255);
}

/* Menu Sélection */

.selectionButtons {
    text-align: center;
    padding-top: 1.5%;
    padding-bottom: 1.5%;
    width: 100%;
    background-color: rgb(25, 167, 206);
    color: rgb(255,255,255);
    font-size: 1.2em;
    vertical-align: top;
    border-style: dashed;
    border-color: rgb(255, 255, 255);
    border-top: 0;
    border-left: 0;
    border-right: 0;
}

#listItems {
    display: flex;
    justify-content: center;
    list-style: none;
}

li{
    padding-left: 1%;
    padding-right: 1%;
    list-style: none;
    -webkit-user-select: none;  /* Chrome all / Safari all */
    -moz-user-select: none;     /* Firefox all */
    -ms-user-select: none;      /* IE 10+ */
    user-select: none; 
}

/* Partie Simpsons */
.simpsonsPart {
    display: flex;
    flex-direction: column;
}

/* Article Principale */

.articleSimpsons {
    margin-top: 3%;
    padding-left: 2.5%;
    padding-right: 2.5%;
    margin-left: 1%;
    margin-right: 1%;
}

#articleName {
    color: rgb(231, 177, 10);
    font-weight : bold;
    font-size: 2.3em;
}

#articleText {
    padding-top: 1%;
    font-size: 1.1em;
    text-align: justify;
}

/* Jaquette des films */


.moviePart {
    display: flex;
    justify-content: space-between;
    padding-left: 2.5%;
    padding-right: 2.5%;
    padding-top: 5%;
    padding-bottom: 5%;
}

.moviePicture {
    width: 80%;
    margin-left: 5%;
    margin-right: 5%;
    border-style: solid;
    border-color: rgb(95, 95, 95);
    -webkit-user-select: none;  /* Chrome all / Safari all */
    -moz-user-select: none;     /* Firefox all */
    -ms-user-select: none;      /* IE 10+ */
    user-select: none; 
}

/* Article Matt */

.mattInfo {
    margin-top: 6.75%;
    margin-bottom: 3.2%;
    background-color: rgb(25, 167, 206);
    color: rgb(255,255,255);
}
#mattName {
    font-weight : bold;
    font-size: 1.15em;
    text-align: center;
}

.mattFigure {
    padding-left: 2%;
    padding-right: 2%;
}

#mattImage {
    display: flex;
    justify-content: center;
    border-style: solid;
    border-color: rgb(255, 255, 255);
    margin-top: 5%;
    width: 100%;
    -webkit-user-select: none;  /* Chrome all / Safari all */
    -moz-user-select: none;     /* Firefox all */
    -ms-user-select: none;      /* IE 10+ */
    user-select: none; 
}

#mattName {
    margin-top: 3.5%;
    margin-bottom: 3.5%;
    font-size: 1.5em;
}

#mattText {
    text-align: justify;
    margin-top: 5%;
    margin-bottom: 5%;
    font-size: 1em;
    margin-left: 5%;
    margin-right: 5%;
}

/* Bas de page et mention légales */
footer {
    height: 1.8em;
    width: 100%;
    background-color: rgb(58, 16, 120);
    color: rgb(255,255,255);
    text-align: center;
    font-weight : bold;
}

@media only screen and (max-width: 800px) {
    .container {
      background-color: lightblue;
      padding : 0 0;
    }

    .centralBlock {
        display: flex;
        flex-direction: column;
    }

    /* Navigation Bars */

    .selectionButtons {
        width: 100%;
        margin-left: 0;
        margin-right: 0;
        margin-top: 0;
        vertical-align: top;
        padding: 15px 0;
    }

    #listItems {
        display: flex;
        flex-direction: column;
    }

    /* Simpsons */
    .simpsonsPart {
        margin: 0;
        padding: 0;
    }

    /* Article */

    #articleName {
        margin-top: 4%;
    }

    #articleText {
        margin-bottom: 4%;
    }

    /* Movie */

    .moviePart {
        margin: 0;
        padding: 0;
        display: flex;
        justify-content: center;
        flex-direction: column;
    }

    .movieFigure {
        display: flex;
        justify-content: center;
    }

    .moviePicture {
        margin: 2% 0 2% 0;
        width: 50%;
    }

    /* Article Matt */

    .mattInfo {
        margin-left: 0;
        margin-right: 0;
        margin-bottom: 0;
    }

    #mattImage {
        width: 30%;
        margin-left: 35%;
        margin-right: 35%;
    }


    /* Footer */

    footer {
        text-align: center;
    }
  }

